--- a/client/package.json
+++ b/client/package.json
@@ -8,7 +8,8 @@
     "@testing-library/user-event": "^12.1.10",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-otp-input": "^2.4.0",
+    "react-icons": "^4.3.1",
+    "react-pro-sidebar": "^0.7.1",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
     "web-vitals": "^1.0.1"
